--- a/sarkany.css
+++ b/sarkany.css
@@ -11,9 +11,12 @@ body{
 	margin-bottom: 50px;
 	border-top-left-radius: 50px;
 	border-bottom-right-radius: 50px;
+  #leiras {
+    padding: 35px;  
+}
 }
 
-h1{
+h1,h2{
 	color: indigo;
 	font-variant: small-caps;
 	text-shadow: 1px 1px white;
@@ -37,8 +40,9 @@ p{
   border-radius: 25px;
   overflow: hidden;
   box-shadow: 10px 10px 10px gray;  
+  border: 2px darkblue;
+  font-style: italic
 }
-
 .kepkeret img{
 	width: 385px;
   position: relative;
@@ -48,4 +52,9 @@ p{
 
 a{
   text-decoration: none;
+  font-weight: bold;
+}
+
+ul li{
+  margin-bottom: 25px;
 }
